# serializer version: 1
# name: test_update_state[Air Purifier 131s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'air-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LV-PUR131S',
      'model_id': None,
      'name': 'Air Purifier 131s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Air Purifier 131s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.air_purifier_131s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'air-purifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Air Purifier 131s][update.air_purifier_131s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Air Purifier 131s',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.air_purifier_131s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Air Purifier 131s][update.air_purifier_131s_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Air Purifier 131s None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.air_purifier_131s_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Air Purifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Core200S',
      'model_id': None,
      'name': 'Air Purifier 200s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Air Purifier 200s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.air_purifier_200s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Air Purifier 200s][update.air_purifier_200s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Air Purifier 200s',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.air_purifier_200s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Air Purifier 200s][update.air_purifier_200s_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Air Purifier 200s None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.air_purifier_200s_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Air Purifier 400s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '400s-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C401S-WJP',
      'model_id': None,
      'name': 'Air Purifier 400s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Air Purifier 400s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.air_purifier_400s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '400s-purifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Air Purifier 400s][update.air_purifier_400s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Air Purifier 400s',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.air_purifier_400s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Air Purifier 400s][update.air_purifier_400s_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Air Purifier 400s None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.air_purifier_400s_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Air Purifier 600s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C601S-WUS',
      'model_id': None,
      'name': 'Air Purifier 600s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Air Purifier 600s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.air_purifier_600s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '600s-purifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Air Purifier 600s][update.air_purifier_600s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Air Purifier 600s',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.air_purifier_600s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Air Purifier 600s][update.air_purifier_600s_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Air Purifier 600s None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.air_purifier_600s_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Dimmable Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-bulb',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100',
      'model_id': None,
      'name': 'Dimmable Light',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Dimmable Light][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.dimmable_light',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'dimmable-bulb',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Dimmable Light][update.dimmable_light]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'firmware',
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Dimmable Light',
      'supported_features': <UpdateEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'update.dimmable_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_update_state[Dimmable Light][update.dimmable_light_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Dimmable Light None',
      'supported_features': <UpdateEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'update.dimmable_light_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_update_state[Dimmer Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-switch',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWD16',
      'model_id': None,
      'name': 'Dimmer Switch',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Dimmer Switch][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.dimmer_switch',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'dimmable-switch',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Dimmer Switch][update.dimmer_switch]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Dimmer Switch',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.dimmer_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Dimmer Switch][update.dimmer_switch_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Dimmer Switch None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.dimmer_switch_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Humidifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '200s-humidifier4321',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Classic200S',
      'model_id': None,
      'name': 'Humidifier 200s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Humidifier 200s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.humidifier_200s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '200s-humidifier4321',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Humidifier 200s][update.humidifier_200s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Humidifier 200s',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.humidifier_200s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Humidifier 200s][update.humidifier_200s_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Humidifier 200s None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.humidifier_200s_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Humidifier 600S][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-humidifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LUH-A602S-WUS',
      'model_id': None,
      'name': 'Humidifier 600S',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Humidifier 600S][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.humidifier_600s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '600s-humidifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Humidifier 600S][update.humidifier_600s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Humidifier 600S',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.humidifier_600s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Humidifier 600S][update.humidifier_600s_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Humidifier 600S None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.humidifier_600s_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Outlet][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'outlet',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'wifi-switch-1.3',
      'model_id': None,
      'name': 'Outlet',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Outlet][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.outlet',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'outlet',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Outlet][update.outlet]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Outlet',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.outlet',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Outlet][update.outlet_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Outlet None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.outlet_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[SmartTowerFan][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'smarttowerfan',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LTF-F422S-KEU',
      'model_id': None,
      'name': 'SmartTowerFan',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[SmartTowerFan][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.smarttowerfan',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'smarttowerfan',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[SmartTowerFan][update.smarttowerfan]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'SmartTowerFan',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.smarttowerfan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[SmartTowerFan][update.smarttowerfan_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'SmartTowerFan None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.smarttowerfan_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Temperature Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'tunable-bulb',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100CW',
      'model_id': None,
      'name': 'Temperature Light',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Temperature Light][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.temperature_light',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'tunable-bulb',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Temperature Light][update.temperature_light]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Temperature Light',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.temperature_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Temperature Light][update.temperature_light_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Temperature Light None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.temperature_light_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Wall Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'switch',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWL01',
      'model_id': None,
      'name': 'Wall Switch',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_update_state[Wall Switch][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'update',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'update.wall_switch',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'switch',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_update_state[Wall Switch][update.wall_switch]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Wall Switch',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.wall_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_state[Wall Switch][update.wall_switch_none]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/vesync/icon.png',
      'friendly_name': 'Wall Switch None',
      'in_progress': False,
      'installed_version': '1.0.0',
      'latest_version': '1.0.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.wall_switch_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
